[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "py_neo4j_migrations"
author = "Matthew Williams"
author-email = "email.m@ttwill.uk"
home-page = "https://github.com/matt-l-w/py_neo4j_migrations"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
  "typer >=0.3.1",
  "colorama >=0.4.3",
  "shellingham >=1.3.2"
]
